kubernetes/dp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: apigateway
  namespace: demo
  labels:
    app: datapower
spec:
  ports:
  - port: 9443
    name: https
    protocol: TCP
  selector:
    app: datapower
  type: ClusterIP
