kubernetes/dp-soma-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: r284938edb5-dynamic-gateway-service-soma
  namespace: apic
  labels:
    app: r284938edb5-dynamic-gateway-service
  annotations:
    ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
      - apigateway-soma.ozairs.fyre.ibm.com
  rules:
    - host:  apigateway-soma.ozairs.fyre.ibm.com
      http:
        paths:
          - path: /
            backend:
              serviceName: r284938edb5-dynamic-gateway-service-ingress
              servicePort: 5550
